--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -30,8 +30,8 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings">
-      <!--<i class="fa-regular fa-compass"></i>-->
-      <img src="/public/Images/SkyLap.png" class="logo" />
+      <i class="fa-regular fa-compass"></i>
+      <!--<img src="/public/Images/SkyLap.png" class="logo" />-->
     </a>
     <button
       class="navbar-toggler"
